<resources>
    <string name="app_name">KotlinApp</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_to_activity_2">GO to activity 2</string>
    <string name="click_me">click me</string>
    <string name="queen">Show must go on</string>
    <string name="from_MainActivity">\" from MainActivity\"</string>
    <string name="no_data">no data</string>
    <string name="blue">#2053fa</string>
    <string name="go_to_activity_3">GO to activity 3</string>
    <string name="close_the_app">Close the app</string>
    <string name="go_to_previous">Go to previous activity</string>
    <string name="add_contact">Add contact</string>
    <string name="display_text">display text</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_password">Enter your password</string>
    <string name="go_to_activity_1">GO to activity 1</string>
    <string name="truee">True</string>
    <string name="falsee">False</string>
    <string name="go_to_kotlinActivity">GO to KotlinActivity</string>
</resources>